Cascading Change Log

3.3.0 [unreleased]

  Updated c.t.h.PartitionTap to use parent c.t.h.Hfs directory status to determine modified time.

  Fixed issue where c.t.h.Hfs did not clear the file status cache after locally modifying a resource.

  Updated Apache Hadoop 2 based sub-projects to 2.7.3.

  Updated c.f.Flow for all platforms to fail if any sink is c.t.SinkMode#KEEP, and the resource exists. Prior it has
  been the responsibility of any given platform (Hadoop MR or Tez) to determine if the resource existed and to fail
  if true. This firms the c.t.*.PartitionTap contract preventing overwrites of the parent Tap.

  Fixed issue where local mode did not honor c.t.SinkMode#KEEP, allowing a c.f.Flow to overwrite existing data.

3.2.1

  Fixed issue when using a c.p.ConfigDef on a sink c.t.Tap could cause a j.l.ClassCastException.

  Added Apache Tez to output comparison tests.

  Added new convenience methods to c.t.Fields.

3.2.0

  Updated c.s.Scheme with optional #sourceRePrepare() method allowing the Scheme instance to be notified on Input
  instances changes. c.t.TupleEntrySchemeIterator currently allows for an Iterator of Input instances, this method
  allows Scheme to be notified as the Iterator is traversed.

  Fixed issue on Apache Hadoop MapReduce where a c.t.Tap used in both accumulated and streamed roles within a single
  step, but having distinct roles in different pipelines, could not be successfully planned and executed.

  Fixed issue where a triangle of split through a c.p.HashJoin into a c.p.Merge on Apache Tez would fail
  during planning.

  Fixed issue where a triangle of split and joins on Apache Hadoop MapReduce would fail during planning.

  Fixed issue where trivial pipe assemblies that reduced to assemblies with multiple edges between two elements would
  fail, e.g. merging a file with itself.

  Added new planner rule for Apache Hadoop MapReduce and Apache Tez that will decorate any Tap instances on the