@@ -802,6 +802,7 @@ public class Util
           sinkModified = Math.min( sinkModified, sink.getModifiedTime( config ) ); // return youngest mod date
         }
       }
+
     return sinkModified;
     }
 
